--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "http-graceful-shutdown": "^3.1.13",
         "jsonwebtoken": "^9.0.2",
         "pg": "^8.11.3",
+        "source-map-support": "^0.5.21",
         "typeorm": "^0.3.20"
     },
     "devDependencies": {
