--- a/.env.example
+++ b/.env.example
@@ -4,12 +4,7 @@ APP_MODE='development'
 NODE_ENV='local'
 PORT='3001'
 
-# postgres details. adjust it accordingly
-PGDATABASE='db'
-PGHOST='localhost'
-PGPORT='5432'
-PGUSER='postgres' 
-PGPASSWORD='postgrespass123'
+DATABASE_URL='postgres://user:password@host:port/database'
 
 ELASTIC_EMAIL_BASE_URL='https://api.elasticemail.com/v4'
 ELASTIC_EMAIL_API_KEY='<api-key>' # update with the actual key. get the key from the latest page of submitted PDF. 
