--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "jsonwebtoken": "^9.0.2",
         "pg": "^8.11.3",
         "source-map-support": "^0.5.21",
+        "throng": "^5.0.0",
         "typeorm": "^0.3.20"
     },
     "devDependencies": {
@@ -33,6 +34,7 @@
         "@types/jsonwebtoken": "^9.0.5",
         "@types/node": "^20.11.16",
         "@types/pg": "^8.11.0",
+        "@types/throng": "^5.0.7",
         "@typescript-eslint/eslint-plugin": "^6.21.0",
         "@typescript-eslint/parser": "^6.21.0",
         "eslint": "^8.56.0",
