chore: re-structure readme and postmant

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,8 @@ PORT='3001'
 
 DATABASE_URL='postgres://user:password@host:port/database'
 
+# this is exclusive for elastic email implementation
 ELASTIC_EMAIL_BASE_URL='https://api.elasticemail.com/v4'
-ELASTIC_EMAIL_API_KEY='<api-key>' # update with the actual key. get the key from the latest page of submitted PDF. 
+ELASTIC_EMAIL_API_KEY='<api-key>' 
 
 TOKEN_SECRET_KEY='c4b358fb-647c-4820-bd8d-3a3e865721ca'
