--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
         "jsonwebtoken": "^9.0.2",
         "pg": "^8.11.3",
         "source-map-support": "^0.5.21",
+        "swagger-ui-express": "^5.0.0",
         "throng": "^5.0.0",
-        "typeorm": "^0.3.20"
+        "typeorm": "^0.3.20",
+        "yaml": "^2.3.4"
     },
     "devDependencies": {
         "@apidevtools/json-schema-ref-parser": "^11.1.0",
@@ -34,6 +36,7 @@
         "@types/jsonwebtoken": "^9.0.5",
         "@types/node": "^20.11.16",
         "@types/pg": "^8.11.0",
+        "@types/swagger-ui-express": "^4.1.6",
         "@types/throng": "^5.0.7",
         "@typescript-eslint/eslint-plugin": "^6.21.0",
         "@typescript-eslint/parser": "^6.21.0",
