--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,5 +25,5 @@
         "target": "es6",
         "typeRoots": ["node_modules/@types"]
     },
-    "exclude": ["coverage", "builds"]
+    "exclude": ["coverage", "builds", "tests"]
 }
